--- a/style.css
+++ b/style.css
@@ -79,59 +79,103 @@ section{
     text-transform: uppercase;
 }
 
-.header{
+.header {
     position: fixed;
-    top:0; left: 0;
+    top: 0;
+    left: 0;
     z-index: 999;
     background: var(--bg-color);
-    width: 30rem;
-    border-right: var(--border);
-    height: 100%;
-    padding:2rem;
+    width: 100%;
+    border-bottom: var(--border);
+    height: auto;
+    padding: 2rem;
     text-align: center;
 }
 
-.header .user img{
-    margin:1rem 0;
-    border:1rem solid transparent;
-    border-radius: 35%;
-    height: 25rem;
-    width: 25rem;
+@media (min-width: 768px) {
+    .header {
+        width: 30rem;
+        height: 100%;
+        border-right: var(--border);
+        border-bottom: none;
+    }
+}
+
+.header .user img {
+    margin: 1rem 0;
+    border: 1rem solid transparent;
+    border-radius: 50%;
+    height: 10rem;
+    width: 10rem;
     box-shadow: var(--box-shadow);
 }
 
-.header .user h3{
-    color:var(--black);
-    font-size: 2.5rem;
+@media (min-width: 480px) {
+    .header .user img {
+        height: 15rem;
+        width: 15rem;
+    }
 }
 
-.header .user p{
-    color:var(--green);
-    font-size: 1.5rem;
+@media (min-width: 768px) {
+    .header .user img {
+        height: 25rem;
+        width: 25rem;
+    }
 }
 
-.header .navbar{
+.header .user h3 {
+    color: var(--black);
+    font-size: 2rem;
+}
+
+@media (min-width: 768px) {
+    .header .user h3 {
+        font-size: 2.5rem;
+    }
+}
+
+.header .user p {
+    color: var(--green);
+    font-size: 1.2rem;
+}
+
+@media (min-width: 768px) {
+    .header .user p {
+        font-size: 1.5rem;
+    }
+}
+
+.header .navbar {
     padding-top: 1rem;
 }
 
-.header .navbar a{
+.header .navbar a {
     display: block;
-    margin:1.5rem 0;
-    padding:.7rem;
+    margin: 1rem 0;
+    padding: 0.7rem;
     border-radius: 5rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     box-shadow: var(--box-shadow);
-    color:var(--black);
+    color: var(--black);
 }
 
-.header .navbar a:hover{
+@media (min-width: 768px) {
+    .header .navbar a {
+        margin: 1.5rem 0;
+        font-size: 2rem;
+    }
+}
+
+.header .navbar a:hover {
     box-shadow: var(--box-shadow-inset);
     color: var(--green);
 }
 
-#menu-btn{
+#menu-btn {
     position: fixed;
-    top:1.5rem; left: 2rem;
+    top: 1.5rem;
+    left: 2rem;
     z-index: 1000;
     height: 5rem;
     width: 5rem;
@@ -141,19 +185,26 @@ section{
     cursor: pointer;
     box-shadow: var(--box-shadow);
     text-align: center;
-    color:var(--black);
+    color: var(--black);
     background: var(--bg-color);
-    display: none;
+    display: block;
 }
 
-#menu-btn:hover{
-    color:var(--green);
+@media (min-width: 768px) {
+    #menu-btn {
+        display: none;
+    }
+}
+
+#menu-btn:hover {
+    color: var(--green);
     box-shadow: var(--box-shadow-inset);
 }
 
-#theme-toggler{
+#theme-toggler {
     position: fixed;
-    top:1.5rem; right: 2rem;
+    top: 1.5rem;
+    right: 2rem;
     z-index: 1000;
     height: 5rem;
     width: 5rem;
@@ -163,59 +214,94 @@ section{
     cursor: pointer;
     box-shadow: var(--box-shadow);
     text-align: center;
-    color:var(--black);
+    color: var(--black);
     background: var(--bg-color);
 }
 
-#theme-toggler:hover{
-    color:var(--green);
+#theme-toggler:hover {
+    color: var(--green);
     box-shadow: var(--box-shadow-inset);
 }
 
-.home{
+.home {
     display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding-top: 20rem;
 }
 
-.home .content h3{
-    font-size: 7rem;
-    color:var(--black);
+@media (min-width: 768px) {
+    .home {
+        padding-top: 0;
+    }
+}
+
+.home .content h3 {
+    font-size: 3rem;
+    color: var(--black);
     line-height: 1.1;
     text-transform: uppercase;
 }
 
-.home .content p{
-    font-size: 2rem;
-    color:var(--green);
-    padding-bottom: .5rem;
+@media (min-width: 768px) {
+    .home .content h3 {
+        font-size: 7rem;
+    }
 }
 
-.home .share{
+.home .content p {
+    font-size: 1.2rem;
+    color: var(--green);
+    padding-bottom: 0.5rem;
+}
+
+@media (min-width: 768px) {
+    .home .content p {
+        font-size: 2rem;
+    }
+}
+
+.home .share {
     position: relative;
-    top: 10rem;
-    border-radius: .5rem;
+    top: 5rem;
+    border-radius: 0.5rem;
     box-shadow: var(--box-shadow);
-    padding:1rem;
+    padding: 1rem;
 }
 
-.home .share a{
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    box-shadow: var(--box-shadow);
-    margin:.5rem;
-    font-size: 2rem;
-    color:var(--black);
-    border-radius: .5rem;
+@media (min-width: 768px) {
+    .home .share {
+        top: 10rem;
+    }
 }
 
-.home .share a:hover{
+.home .share a {
+    height: 4rem;
+    width: 4rem;
+    line-height: 4rem;
+    box-shadow: var(--box-shadow);
+    margin: 0.5rem;
+    font-size: 1.5rem;
+    color: var(--black);
+    border-radius: 0.5rem;
+}
+
+@media (min-width: 768px) {
+    .home .share a {
+        height: 5rem;
+        width: 5rem;
+        line-height: 5rem;
+        font-size: 2rem;
+    }
+}
+
+.home .share a:hover {
     box-shadow: var(--box-shadow-inset);
-    color:var(--green);
+    color: var(--green);
 }
+
 
 .academics {
     font-family: 'Arial', sans-serif;
@@ -223,8 +309,6 @@ section{
     padding: 20px;
     border-radius: 10px;
 }
-
-
 
 .row {
     display: flex;
@@ -336,7 +420,7 @@ section{
     transition-delay: .3s;
 }
 
-.skills .box-container .box: hover .content h3{
+.skills .box-container .box:hover .content h3{
     transform: translateY(0rem);
     opacity: 1;
 }
