--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
-:root{
+: root{
     --green:#27ae60;
-    --black:#444;
+    --Black:#444;
     --light-color:#777;
     --bg-color:#e6e6e6;
     --border:.1rem solid rgba(0,0,0,.2);
@@ -33,7 +33,7 @@ body{
     padding-left: 30rem;
 }
 
-body.active{
+body. active{
     --black:#fff;
     --light-color:#ddd;
     --bg-color:#222;
@@ -61,7 +61,7 @@ section{
     box-shadow: var(--box-shadow);
 }
 
-.btn:hover{
+.btn: hover{
     box-shadow: var(--box-shadow-inset);
     color:var(--green);
 }
@@ -170,57 +170,6 @@ section{
 .header .navbar a:hover {
     box-shadow: var(--box-shadow-inset);
     color: var(--green);
-}
-
-#menu-btn {
-    position: fixed;
-    top: 1.5rem;
-    left: 2rem;
-    z-index: 1000;
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    border-radius: 50%;
-    font-size: 2rem;
-    cursor: pointer;
-    box-shadow: var(--box-shadow);
-    text-align: center;
-    color: var(--black);
-    background: var(--bg-color);
-    display: block;
-}
-
-@media (min-width: 768px) {
-    #menu-btn {
-        display: none;
-    }
-}
-
-#menu-btn:hover {
-    color: var(--green);
-    box-shadow: var(--box-shadow-inset);
-}
-
-#theme-toggler {
-    position: fixed;
-    top: 1.5rem;
-    right: 2rem;
-    z-index: 1000;
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    border-radius: 50%;
-    font-size: 2rem;
-    cursor: pointer;
-    box-shadow: var(--box-shadow);
-    text-align: center;
-    color: var(--black);
-    background: var(--bg-color);
-}
-
-#theme-toggler:hover {
-    color: var(--green);
-    box-shadow: var(--box-shadow-inset);
 }
 
 .home {
