--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-
 :root{
     --green:#27ae60;
     --black:#444;
@@ -13,7 +11,7 @@
 }
 
 *{
-    font-family: 'Poppins', sans-serif;
+    font-family: Lora;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
