--- a/style.css
+++ b/style.css
@@ -577,6 +577,8 @@ section{
 @media (min-width: 768px) {
     .about .row .counter .box h3 {
         font-size: 2rem;
+        font-family: Lora;
+
     }
 }
 
